gccida/g0/recog_21
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_21/src/insn-recog.c:26395:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x2; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_21/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_21/src/insn-recog.c:26398:34: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| !rtx_equal_p( x1->fld[0].rtx, recog_data_0.operand[1]) 
                                 ^~~~~~~~~~~~
                                 recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_21/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_21/src/insn-recog.c:26399:35: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
|| !rtx_equal_p( *( rtx *)&x1[1], recog_data_0.operand[0]) 
                                  ^~~~~~~~~~~~
                                  recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_21/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_21/src/insn-recog.c:26417:14: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x4bf = ( rtx)x3v[1]; 
             ^~~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_21/src/insn-recog.c:26422:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x3w = ( rtx)x2[1]; 
            ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_21/src/insn-recog.c:26455:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x4w; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_21/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_21/src/insn-recog.c:26456:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x3c = ( rtx)x2[1]; 
            ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_21/src/insn-recog.c:26464:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = x4x; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_21/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_21/src/insn-recog.c:26473:15: error: use of undeclared identifier 'recog_data_0'
|| *( _WORD *)recog_data_0.operand[1] == 66 && *( _WORD *)recog_data_0.operand[2] == 66 ) 
              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_21/src/insn-recog.c:26473:59: error: use of undeclared identifier 'recog_data_0'
|| *( _WORD *)recog_data_0.operand[1] == 66 && *( _WORD *)recog_data_0.operand[2] == 66 ) 
                                                          ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_21/src/insn-recog.c:26488:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x4y; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_21/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_21/src/insn-recog.c:26489:13: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x3d = ( rtx)x2[1]; 
            ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_21/src/insn-recog.c:26497:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = x4z; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_21/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_21/src/insn-recog.c:26506:15: error: use of undeclared identifier 'recog_data_0'
|| *( _WORD *)recog_data_0.operand[1] == 66 && *( _WORD *)recog_data_0.operand[2] == 66 ) 
              ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_21/src/insn-recog.c:26506:59: error: use of undeclared identifier 'recog_data_0'
|| *( _WORD *)recog_data_0.operand[1] == 66 && *( _WORD *)recog_data_0.operand[2] == 66 ) 
                                                          ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_21/src/insn-recog.c:26518:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[1] = x3a; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_21/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_21/src/insn-recog.c:26519:27: error: operand of type 'struct rtx_def' where arithmetic or pointer type is required
x3b = (  struct rtx_def *)x2[1]; 
                          ^~~~~
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_21/src/insn-recog.c:26522:1: error: use of undeclared identifier 'recog_data_0'; did you mean 'recog_data'?
recog_data_0.operand[2] = x3b; 
^~~~~~~~~~~~
recog_data
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_21/src/recog.h:203:26: note: 'recog_data' declared here
extern struct recog_data recog_data;
                         ^
/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_21/src/insn-recog.c:26531:15: error: use of undeclared identifier 'recog_data_0'
|| *( _WORD *)recog_data_0.operand[1] == 66 && *( _WORD *)recog_data_0.operand[2] == 66 ) 
              ^
fatal error: too many errors emitted, stopping now [-ferror-limit=]
20 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O0/gcc-gcc-O0/recog_21/src/obj/insn-recog.o] Error 1
